# hardsecnet-pyside

./: .gitignore  DESIGN.md  README.md  clean_db.py  get_profiles.py  pyproject.toml  test.ps1
docs/: ARCHITECTURE_GUIDE.md  CIS_BENCHMARK_ENGINE.md  FIRST_RUN.md  implementation_proof.md  implementation_proof_full_platform.md  implementation_proof_v2_fleet.md  spec-v2-fleet-control-plane.md  validation.md  validation_full_platform.md  validation_v2_fleet.md
docs/bmad/: architecture.md  checkpoint.md  dev_plan.md  epics_and_stories.md  final_project.md  implementation_proof_epic_1.md  ledger.md  prd.md  release_notes_final_project.md  scope_realignment.md  validation_epic_1.md  validation_final_project.md
original_docs/: PRD.md
services/control_plane/: __init__.py  alembic.ini
services/device_agent/: __init__.py
shared/: __init__.py
shared/contracts/: __init__.py  models.py
src/hardsecnet_pyside/: __init__.py  __main__.py  agents.py  app.py  backend_client.py  benchmark.py  config.py  models.py  persistence.py  services.py
src/hardsecnet_pyside.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stitch-mcp/: pyproject.toml
stitch-mcp/stitch_mcp/: __init__.py  server.py
stitch-mcp/stitch_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_agents.py  test_benchmark_engine.py  test_control_plane_api.py  test_controller.py  test_controller_backend_mode.py  test_device_agent.py  test_fleet.py  test_ui_smoke.py
tools/: recreate_blackbook.py
web/dashboard/: index.html  package.json  (+1 more)
(+825 files in other folders)
